Remove emojis, filters, fix storage error, enable base editor

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1>✨ アクリルスタンド工房</h1>
+                    <h1>アクリルスタンド工房</h1>
                 </div>
                 <nav class="nav">
                     <a href="#hero" class="nav-link">ホーム</a>
@@ -58,13 +58,13 @@
     <section id="hero" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2 class="hero-title">✨ あなたの推しを<br>キラキラアクリルスタンドに 💕</h2>
+                <h2 class="hero-title">あなたの推しを<br>アクリルスタンドに</h2>
                 <p class="hero-description">
                     お気に入りのイラストや写真で、世界に一つだけの推しグッズを作ろう！<br>
-                    クリアで美しい仕上がりで、デスクやお部屋を可愛く飾れます 🌸<br>
-                    1個から注文OK！簡単編集ツールで誰でも楽々作成 ⭐
+                    クリアで美しい仕上がりで、デスクやお部屋を飾れます。<br>
+                    1個から注文OK！簡単編集ツールで誰でも楽々作成。
                 </p>
-                <a href="#creator" class="cta-button">🎨 今すぐ作成する →</a>
+                <a href="#creator" class="cta-button">今すぐ作成する →</a>
             </div>
         </div>
     </section>
@@ -72,26 +72,26 @@
     <!-- How to Use Section -->
     <section id="how-to-use" class="how-to-use">
         <div class="container">
-            <h2 class="section-title">💫 使い方</h2>
-            <p class="section-subtitle">たった3ステップ！超簡単に推しのアクスタが完成 ✨</p>
+            <h2 class="section-title">使い方</h2>
+            <p class="section-subtitle">たった3ステップ！簡単に推しのアクスタが完成</p>
             <div class="steps">
                 <div class="step-card">
                     <div class="step-number">1</div>
                     <div class="step-icon">📷</div>
-                    <h3 class="step-title">🎨 推しの画像をアップ！</h3>
-                    <p class="step-description">好きな写真やイラストをぽいっとドロップ♪ またはクリックで選ぶだけ！超簡単！</p>
+                    <h3 class="step-title">推しの画像をアップ！</h3>
+                    <p class="step-description">好きな写真やイラストをドロップ、またはクリックで選ぶだけ！</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">2</div>
                     <div class="step-icon">✂️</div>
-                    <h3 class="step-title">✨ 可愛く編集しよう！</h3>
-                    <p class="step-description">トリミング・回転・サイズ調整OK！お好みの台座を選んでプレビューで確認♡</p>
+                    <h3 class="step-title">編集しよう！</h3>
+                    <p class="step-description">トリミング・回転・サイズ調整OK！お好みの台座を選んでプレビューで確認。</p>
                 </div>
                 <div class="step-card">
                     <div class="step-number">3</div>
                     <div class="step-icon">💳</div>
-                    <h3 class="step-title">💕 注文して完成！</h3>
-                    <p class="step-description">サイズを選んでPayPayでサクッと決済！1個からでもOK！あなただけの推しグッズをゲット🌟</p>
+                    <h3 class="step-title">注文して完成！</h3>
+                    <p class="step-description">サイズを選んで決済！1個からでもOK！あなただけの推しグッズをゲット。</p>
                 </div>
             </div>
         </div>
@@ -100,8 +100,8 @@
     <!-- Gallery Section -->
     <section id="gallery" class="gallery">
         <div class="container">
-            <h2 class="section-title">🌸 ギャラリー</h2>
-            <p class="section-subtitle">みんなの可愛いアクスタコレクション 💖</p>
+            <h2 class="section-title">ギャラリー</h2>
+            <p class="section-subtitle">みんなのアクスタコレクション</p>
             <div id="gallery-grid" class="gallery-grid">
                 <!-- Gallery items will be dynamically inserted here -->
             </div>
@@ -114,16 +114,16 @@
     <!-- Creator Tool Section -->
     <section id="creator" class="creator">
         <div class="container">
-            <h2 class="section-title">🎨 アクスタ作成コーナー</h2>
+            <h2 class="section-title">アクスタ作成コーナー</h2>
             
             <div class="creator-content">
                 <!-- Upload Area -->
                 <div class="upload-section">
                     <div id="upload-area" class="upload-area">
-                        <div class="upload-icon">🎀</div>
-                        <p class="upload-text">推しの画像をここにドロップ♪</p>
+                        <div class="upload-icon"></div>
+                        <p class="upload-text">推しの画像をここにドロップ</p>
                         <p class="upload-subtext">または</p>
-                        <button id="select-file-btn" class="select-file-btn">✨ ファイルを選択 ✨</button>
+                        <button id="select-file-btn" class="select-file-btn">ファイルを選択</button>
                         <input type="file" id="file-input" accept="image/*" style="display: none;">
                         <p class="upload-note">対応形式: JPG, PNG, GIF (最大10MB)</p>
                     </div>
@@ -133,7 +133,7 @@
                 <div id="editor-section" class="editor-section" style="display: none;">
                     <div class="editor-container">
                         <div class="preview-area">
-                            <h3>💎 完成イメージ</h3>
+                            <h3>完成イメージ</h3>
                             <div class="acrylic-stand-preview">
                                 <div class="preview-placeholder" id="preview-placeholder">
                                     <p>👆 画像をアップロードすると</p>
@@ -157,7 +157,6 @@
                             <!-- Editor Mode Tabs -->
                             <div class="editor-mode-tabs">
                                 <button class="editor-mode-tab active" data-mode="basic">基本編集</button>
-                                <button class="editor-mode-tab" data-mode="filters">フィルター</button>
                                 <button class="editor-mode-tab" data-mode="cropping">切り抜き</button>
                                 <button class="editor-mode-tab" data-mode="base">台座編集</button>
                             </div>
@@ -181,82 +180,13 @@
                                 <button id="reset-image" class="control-btn secondary">画像をリセット</button>
                             </div>
 
-                            <!-- Filters Panel -->
-                            <div id="filters-panel" class="tool-panel filters-panel">
-                                <div class="tool-panel-content">
-                                    <div class="filter-presets">
-                                        <h4>プリセットフィルター</h4>
-                                        <div class="filter-grid">
-                                            <button class="filter-btn active" data-filter="none">なし</button>
-                                            <button class="filter-btn" data-filter="grayscale">モノクロ</button>
-                                            <button class="filter-btn" data-filter="sepia">セピア</button>
-                                            <button class="filter-btn" data-filter="vintage">ビンテージ</button>
-                                            <button class="filter-btn" data-filter="brighten">明るく</button>
-                                            <button class="filter-btn" data-filter="darken">暗く</button>
-                                            <button class="filter-btn" data-filter="high-contrast">高コントラスト</button>
-                                            <button class="filter-btn" data-filter="blur">ぼかし</button>
-                                        </div>
-                                    </div>
-
-                                    <div class="filter-adjustments">
-                                        <h4>詳細調整</h4>
-                                        
-                                        <div class="adjustment-control">
-                                            <label>
-                                                明るさ: <span id="brightness-value">0</span>
-                                            </label>
-                                            <input type="range" id="brightness-slider" class="adjustment-slider" 
-                                                   min="-100" max="100" value="0" step="1">
-                                        </div>
-
-                                        <div class="adjustment-control">
-                                            <label>
-                                                コントラスト: <span id="contrast-value">0</span>
-                                            </label>
-                                            <input type="range" id="contrast-slider" class="adjustment-slider" 
-                                                   min="-50" max="50" value="0" step="1">
-                                        </div>
-
-                                        <div class="adjustment-control">
-                                            <label>
-                                                彩度: <span id="saturation-value">0</span>
-                                            </label>
-                                            <input type="range" id="saturation-slider" class="adjustment-slider" 
-                                                   min="-50" max="50" value="0" step="1">
-                                        </div>
-
-                                        <div class="adjustment-control">
-                                            <label>
-                                                ぼかし: <span id="blur-value">0</span>
-                                            </label>
-                                            <input type="range" id="blur-slider" class="adjustment-slider" 
-                                                   min="0" max="5" value="0" step="1">
-                                        </div>
-                                    </div>
-
-                                    <div class="background-removal">
-                                        <h4>背景除去</h4>
-                                        <button id="remove-bg-btn" class="control-btn primary">
-                                            🪄 背景を自動除去
-                                        </button>
-                                        <p class="bg-removal-note">※ 白い背景の画像に最適です</p>
-                                    </div>
-
-                                    <div class="filter-actions">
-                                        <button id="filter-reset-btn" class="control-btn secondary">
-                                            🔄 リセット
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-
                             <!-- Cropping Tools Panel -->
                             <div id="cropping-panel" class="tool-panel cropping-panel">
                                 <div class="tool-panel-content">
                                     <!-- Professional Cropper Button (Recommended) -->
                                     <div style="margin-bottom: 1.5rem;">
                                         <button id="pro-cropper-btn" class="control-btn primary" style="width: 100%; padding: 1rem; font-size: 1rem; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none; color: white; font-weight: bold; cursor: pointer; border-radius: 8px; transition: all 0.3s;">
-                                            ✂️ プロ仕様切り抜き（おすすめ）
+                                            プロ仕様切り抜き（おすすめ）
                                         </button>
                                         <p style="text-align: center; font-size: 0.85rem; color: #666; margin-top: 0.5rem;">
                                             縦横比・回転・ズームが使える高機能ツール
@@ -675,7 +605,6 @@
     <script src="js/order-confirmation.js?v=20251230" defer></script>
     <script src="js/main.js?v=20251230" defer></script>
     <script src="js/decorations.js?v=20251230" defer></script>
-    <script src="js/filters.js?v=20251230" defer></script>
     <script src="js/cropping.js?v=20251230" defer></script>
     <script src="js/professional-cropper.js?v=20251230" defer></script>
     <script src="js/base-editor.js?v=20251230" defer></script>
