--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/favicon.png">
     
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/decorations.css">
-    <link rel="stylesheet" href="css/editor.css">
-    <link rel="stylesheet" href="css/otaku-enhancements.css">
+    <link rel="stylesheet" href="css/style.css?v=20260102-2">
+    <link rel="stylesheet" href="css/decorations.css?v=20260102-2">
+    <link rel="stylesheet" href="css/editor.css?v=20260102-2">
+    <link rel="stylesheet" href="css/otaku-enhancements.css?v=20260102-2">
 
     <!-- Cropper.js Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.min.css">
@@ -601,14 +601,14 @@
     <!-- Cropper.js Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.1/cropper.min.js"></script>
 
-    <script src="js/utils.js?v=20260102" defer></script>
-    <script src="js/order-confirmation.js?v=20260102" defer></script>
-    <script src="js/main.js?v=20260102" defer></script>
-    <script src="js/decorations.js?v=20260102" defer></script>
-    <script src="js/cropping.js?v=20260102" defer></script>
-    <script src="js/professional-cropper.js?v=20260102" defer></script>
-    <script src="js/base-editor.js?v=20260102" defer></script>
-    <script src="js/editor.js?v=20260102" defer></script>
-    <script src="js/payment.js?v=20260102" defer></script>
+    <script src="js/utils.js?v=20260102-2" defer></script>
+    <script src="js/order-confirmation.js?v=20260102-2" defer></script>
+    <script src="js/main.js?v=20260102-2" defer></script>
+    <script src="js/decorations.js?v=20260102-2" defer></script>
+    <script src="js/cropping.js?v=20260102-2" defer></script>
+    <script src="js/professional-cropper.js?v=20260102-2" defer></script>
+    <script src="js/base-editor.js?v=20260102-2" defer></script>
+    <script src="js/editor.js?v=20260102-2" defer></script>
+    <script src="js/payment.js?v=20260102-2" defer></script>
 </body>
 </html>
